<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InterstitialFragment">

    <TextView
        android:id="@+id/textview_interstitial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_interstitial"
        app:layout_constraintBottom_toTopOf="@+id/btnLayout_interstitial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/btnLayout_interstitial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_interstitial_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_interstitial_load" />

        <Button
            android:id="@+id/btn_intersitial_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_interstitial_show" />

    </LinearLayout>

    <com.vader87.locatlayout.LogcatLayout
        android:id="@+id/log_view_interstitial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>